// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kataloge Tests > gegen { schema: 'GymAbi01' } > getBeschaeftigungsarten 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 0,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Kataloge Tests > gegen { schema: 'GymAbi01' } > getHaltestellen 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    Haltestelle {
      "bezeichnung": "628 Meckelstraße",
      "entfernungSchule": 0,
      "id": 1,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": false,
      "sortierung": 1,
    },
    Haltestelle {
      "bezeichnung": "628 Fingscheid",
      "entfernungSchule": 0,
      "id": 2,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": true,
      "sortierung": 2,
    },
    Haltestelle {
      "bezeichnung": "RE7 Hauptbahnhof",
      "entfernungSchule": 0,
      "id": 3,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": false,
      "sortierung": 3,
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 3,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;


exports[`Kataloge Tests > gegen { schema: 'GymAbi01' } > getKatalogBetriebsart 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    Betriebsart {
      "bezeichnung": "Einzelhandel",
      "id": 1,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": true,
      "sortierung": 1,
    },
    Betriebsart {
      "bezeichnung": "Industrie",
      "id": 2,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": false,
      "sortierung": 2,
    },
    Betriebsart {
      "bezeichnung": "Verwaltung",
      "id": 3,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": false,
      "sortierung": 3,
    },
    Betriebsart {
      "bezeichnung": "Handwerk",
      "id": 4,
      "istSichtbar": true,
      "referenziertInAnderenTabellen": true,
      "sortierung": 4,
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 4,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

